--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# App artifacts
+/_build
+/db
+/deps
+/*.ez
+.elixir_ls/
+.history/
+.env
+
 # The directory Mix will write compiled artifacts to.
 /_build/
 
@@ -32,3 +41,11 @@ npm-debug.log
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
+
+# Files matching config/*.secret.exs pattern contain sensitive
+# data and you should not commit them into version control.
+#
+# Alternatively, you may comment the line below and commit the
+# secrets files as long as you replace their contents by environment
+# variables.
+/config/*.secret.exs
